docs: make everything expnded by default
